project-base/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: shopsys
spec:
  rules:
  - host: $FIRST_DOMAIN_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver
          servicePort: 8080
  - host: $SECOND_DOMAIN_HOSTNAME
    http:
      paths:
      - path: /
        backend:
          serviceName: webserver
          servicePort: 8080
